# GenerativeMusic

./: .gitignore  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
notebooks/: strudel_to_python.ipynb
src/GenerativeMusic/: square.py
tests/: conftest.py  test_square.py
